updated login page and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -13,16 +13,13 @@
       href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:300,400,500,700"
       rel="stylesheet"
     />
-    <title>Devias Kit Pro</title>
+    <title>Vezeti Communication</title>
     <meta
       name="description"
       content="A professional kit that comes with ready-to-use Material-UI© components developed with one common goal in mind, help you build faster &amp; beautiful applications. Each component is fully customizable, responsive and easy to integrate."
     />
-    <meta
-      name="keywords"
-      content="react,material,kit,application,dashboard,admin,template"
-    />
-    <meta name="author" content="Devias IO" />
+    <meta name="keywords" content="vezeti application dashboard template kit" />
+    <meta name="author" content="Vezeti Communication" />
   </head>
 
   <body>
